加入FTB Utilities, OpenBlocks, PetBat, Hunting Dim

--- a/config/apotheosis/enchantments.cfg
+++ b/config/apotheosis/enchantments.cfg
@@ -76,16 +76,9 @@
 
 
 "apotheosis:capturing" {
-    # The max level of this enchantment. [range: 1 ~ 127, default: 13]
     I:"Max Level"=13
-
-    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
-
-    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
     I:"Min Level"=1
-
-    # A function to determine the min enchanting power. [default: ]
     S:"Min Power Function"=
 }
 
@@ -948,6 +941,51 @@
 "minecraft:vanishing_curse" {
     # The max level of this enchantment. [range: 1 ~ 127, default: 1]
     I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"openblocks:explosive" {
+    # The max level of this enchantment. [range: 1 ~ 127, default: 3]
+    I:"Max Level"=3
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"openblocks:flim_flam" {
+    # The max level of this enchantment. [range: 1 ~ 127, default: 14]
+    I:"Max Level"=14
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"openblocks:last_stand" {
+    # The max level of this enchantment. [range: 1 ~ 127, default: 2]
+    I:"Max Level"=2
 
     # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
