--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -199,6 +199,8 @@ crafting {
     B:net.minecraft.block.BlockStoneBrick=true
     B:net.minecraft.block.BlockWorkbench=true
     B:"net.silentchaos512.scalinghealth.init.ModBlocks$1"=true
+    B:openblocks.common.block.BlockElevator=true
+    B:openblocks.common.block.BlockSponge=true
     B:shadows.ench.objects.BlockHellBookshelf=true
     B:slimeknights.tconstruct.gadgets.block.BlockBrownstone=true
     B:slimeknights.tconstruct.gadgets.block.BlockDriedClay=true
