--- a/config/ordinarycoins.cfg
+++ b/config/ordinarycoins.cfg
@@ -334,11 +334,20 @@
     # Which coins use to drop from myrmex_worker? (0 - bronze, 1 - silver, 2 - gold, 3 - platinum)
     I:coinTypeMyrmex_worker=0
 
+    # Which coins use to drop from openblocks.luggage? (0 - bronze, 1 - silver, 2 - gold, 3 - platinum)
+    I:coinTypeOpenblocks.luggage=0
+
+    # Which coins use to drop from openblocks.mini_me? (0 - bronze, 1 - silver, 2 - gold, 3 - platinum)
+    I:coinTypeOpenblocks.mini_me=0
+
     # Which coins use to drop from ozelot? (0 - bronze, 1 - silver, 2 - gold, 3 - platinum)
     I:coinTypeOzelot=0
 
     # Which coins use to drop from parrot? (0 - bronze, 1 - silver, 2 - gold, 3 - platinum)
     I:coinTypeParrot=0
+
+    # Which coins use to drop from petbat? (0 - bronze, 1 - silver, 2 - gold, 3 - platinum)
+    I:coinTypePetbat=0
 
     # Which coins use to drop from pig? (0 - bronze, 1 - silver, 2 - gold, 3 - platinum)
     I:coinTypePig=0
@@ -961,11 +970,20 @@
     # How many coins will drop from myrmex_worker
     I:amountMyrmex_worker=0
 
+    # How many coins will drop from openblocks.luggage
+    I:amountOpenblocks.luggage=0
+
+    # How many coins will drop from openblocks.mini_me
+    I:amountOpenblocks.mini_me=0
+
     # How many coins will drop from ozelot
     I:amountOzelot=0
 
     # How many coins will drop from parrot
     I:amountParrot=0
+
+    # How many coins will drop from petbat
+    I:amountPetbat=0
 
     # How many coins will drop from pig
     I:amountPig=0
