对Hunting Dim做了微量修改

--- a/config/huntingdim/huntingdim.cfg
+++ b/config/huntingdim/huntingdim.cfg
@@ -32,7 +32,7 @@ general {
     I:chanceSound=100
 
     # The chance that the portal will spawn a mob. Peaceful, easy, normal and hard have a 0, 1, 2, and 3 in X chance of spawning a mob, where X is the configured value. [range: 0 ~ 10000, default: 2000]
-    I:chanceSpawn=2000
+    I:chanceSpawn=10000
 
     # The id for the hunting dimension. [range: -2147483648 ~ 2147483647, default: 28885]
     I:dimensionId=28885
@@ -65,7 +65,7 @@ general {
     B:useVoidWorld=false
 
     # The type of world to use for the hunting dimension. Vanilla values include default, flat, largeBiomes, amplified, customized, debug_all_block_states, and default_1_1 Keep in mind that this will be ignored if you use mimicSurfaceWorld! [default: default]
-    S:worldType=default
+    S:worldType=flat_1_1
 }
 
 
