--- a/config/ftbutilities.cfg
+++ b/config/ftbutilities.cfg
@@ -39,12 +39,12 @@ chat {
 
 
 commands {
-    B:back=true
+    B:back=false
     B:chunks=true
     B:fly=true
     B:god=true
     B:heal=true
-    B:home=true
+    B:home=false
     B:inv=true
     B:kickme=true
     B:killall=true
@@ -56,8 +56,8 @@ commands {
     B:rec=true
     B:rtp=true
     B:spawn=true
-    B:tpa=true
-    B:tpl=true
+    B:tpa=false
+    B:tpl=false
     B:trash_can=true
     B:warp=true
 }
@@ -77,14 +77,14 @@ login {
     B:enable_global_badges=true
 
     # Enables message of the day.
-    B:enable_motd=false
+    B:enable_motd=true
 
     # Enables starting items.
     B:enable_starting_items=false
 
     # Message of the day. This will be displayed when player joins the server.
     S:motd <
-        "Hello player!"
+        "Welcome to USTC Server 12th!"
      >
 
     # Items to give player when he first joins the server.
@@ -116,7 +116,7 @@ world {
     B:chunk_claiming=true
 
     # Enables chunk loading. If chunk_claiming is set to false, changing this won't do anything.
-    B:chunk_loading=true
+    B:chunk_loading=false
 
     # Disables player damage when they are stuck in walls.
     B:disable_player_suffocation_damage=false
