--- a/config/ichunutil.cfg
+++ b/config/ichunutil.cfg
@@ -43,7 +43,7 @@ module {
         general {
             # 显示您已同意此最终用户许可协议的字符串
             # 如果这个配置来自服务器端，请将其设置为true。
-            S:eulaAcknowledged=FVortex
+            S:eulaAcknowledged=true
         }
 
     }
@@ -70,7 +70,7 @@ module {
             I:versionNotificationTypes=0
 
             # 不要更改这项。
-            I:versionSave=29
+            I:versionSave=30
         }
 
     }
