--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -288,9 +288,9 @@ world49056279 {
 
 world50729028 {
     B:bookmarkOverlayEnabled=true
-    B:cheatItemsEnabled=false
+    B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=
+    S:filterText=@eng
     B:overlayEnabled=true
 }
 
@@ -332,10 +332,17 @@ world79398 {
 
 
 world805325770 {
+    # 在打开的 GUI 一侧显示书签列表。
     B:bookmarkOverlayEnabled=true
+
+    # 给予物品而非显示其配方。
     B:cheatItemsEnabled=true
+
+    # 在列表中点击物品以隐藏或取消隐藏。
     B:editEnabled=false
-    S:filterText=@futurev
+    S:filterText=smooth
+
+    # 在打开的 GUI 一侧显示物品列表。
     B:overlayEnabled=true
 }
 
@@ -350,17 +357,10 @@ world942373737 {
 
 
 world99590 {
-    # 在打开的 GUI 一侧显示书签列表。
     B:bookmarkOverlayEnabled=true
-
-    # 给予物品而非显示其配方。
     B:cheatItemsEnabled=true
-
-    # 在列表中点击物品以隐藏或取消隐藏。
     B:editEnabled=false
-    S:filterText=@malisi
-
-    # 在打开的 GUI 一侧显示物品列表。
+    S:filterText=@hostile
     B:overlayEnabled=true
 }
 
