--- a/config/ordinarycoins.cfg
+++ b/config/ordinarycoins.cfg
@@ -151,6 +151,9 @@
     # Which coins use to drop from bat? (0 - bronze, 1 - silver, 2 - gold, 3 - platinum)
     I:coinTypeBat=0
 
+    # Which coins use to drop from bat_smart? (0 - bronze, 1 - silver, 2 - gold, 3 - platinum)
+    I:coinTypeBat_smart=0
+
     # Which coins use to drop from bee? (0 - bronze, 1 - silver, 2 - gold, 3 - platinum)
     I:coinTypeBee=0
 
@@ -363,8 +366,6 @@
 
     # Which coins use to drop from llama? (0 - bronze, 1 - silver, 2 - gold, 3 - platinum)
     I:coinTypeLlama=0
-
-    # Which coins use to drop from lostknights? (0 - bronze, 1 - silver, 2 - gold, 3 - platinum)
     I:coinTypeLostknights=0
 
     # Which coins use to drop from merchant? (0 - bronze, 1 - silver, 2 - gold, 3 - platinum)
@@ -771,6 +772,9 @@
     # How many coins will drop from bat
     I:amountBat=0
 
+    # How many coins will drop from bat_smart
+    I:amountBat_smart=0
+
     # How many coins will drop from bee
     I:amountBee=0
 
@@ -983,8 +987,6 @@
 
     # How many coins will drop from llama
     I:amountLlama=0
-
-    # How many coins will drop from lostknights
     I:amountLostknights=0
 
     # How many coins will drop from merchant
