--- a/config/tconstruct.cfg
+++ b/config/tconstruct.cfg
@@ -19,7 +19,7 @@ clientside {
     B:listAllMaterials=true
 
     # If true, temperatures in the smeltery and in JEI will display in celsius. If false they will use the internal units of Kelvin, which may be better for devs
-    B:temperatureCelsius=true
+    B:temperatureCelsius=false
 
     # If true tools will enable the forge bucket model on startup and then turn itself off. This is only there so that a fresh install gets the buckets turned on by default.
     B:enableForgeBucketModel=false
