--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,28 @@ mods
 rendered
 resourcepacks
 saves
-screenshots
+time.cfg
+ModpackModeSelector.sh
+UMS-12th-Whitelist/
+banned-ips.json
+banned-players.json
+commands.yml
+eula.txt
+frps.ini
+get_whitelist.sh
+help.yml
+incremental.aromabackup
+mcserver.cfg
+multipart.dat
+ops.json
+permissions.yml
+restart.sh
+run.sh
+server.properties
+simplelogin/
+wepif.yml
+whitelist.json
+world/
 shaderpacks
 1.12.2.jar
 1.12.2.json
@@ -34,3 +55,5 @@ zs_export.json
 .workspace/icons
 .workspace/ModpackModeSelector/__pycache__
 .workspace/ModpackModeSelector/dist
+*.jar
+MCtime.cfg
