--- a/config/ftbutilities.cfg
+++ b/config/ftbutilities.cfg
@@ -39,12 +39,12 @@ chat {
 
 
 commands {
-    B:back=false
+    B:back=true
     B:chunks=true
     B:fly=true
     B:god=true
     B:heal=true
-    B:home=false
+    B:home=true
     B:inv=true
     B:kickme=true
     B:killall=true
@@ -161,7 +161,7 @@ world {
     I:forced_spawn_dimension_weather=-1
 
     # Max /rtp distance
-    D:rtp_max_distance=100000.0
+    D:rtp_max_distance=5000.0
 
     # Max tries /rtp does before failure.
     I:rtp_max_tries=200
@@ -170,10 +170,10 @@ world {
     D:rtp_min_distance=1000.0
 
     # If set to true, explosions and hostile mobs in spawn area will be disabled, players won't be able to attack each other in spawn area.
-    B:safe_spawn=false
+    B:safe_spawn=true
 
     # Show play time in corner.
-    B:show_playtime=false
+    B:show_playtime=true
 
     # Enable spawn area in singleplayer.
     B:spawn_area_in_sp=false
