Optimized for low frequency CPU

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -274,6 +274,7 @@ crafting {
     B:"net.silentchaos512.scalinghealth.init.ModBlocks$1"=true
     B:openblocks.common.block.BlockElevator=true
     B:openblocks.common.block.BlockSponge=true
+    B:org.cyclops.colossalchests.block.ChestWall=true
     B:primetoxinz.coralreef.BlockReef=true
     B:rustic.common.blocks.BlockBase=true
     B:rustic.common.blocks.BlockClayWallDiag=true
