--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -123,8 +123,10 @@ entitiesalwaysinfernal {
 entitybasehealth {
     D:EntityAbyssalZombie=97.49998474121094
     D:EntityAntiCreeper=182.79165649414062
+    D:EntityAntiPlayer=44.92218017578125
     D:EntityAntiSkeleton=44.0
     D:EntityAntiSpider=35.20000076293945
+    D:EntityAntiZombie=20.0
     D:EntityBlaze=20.0
     D:EntityBlueSlime=1.0
     D:EntityCockatrice=20.0
