--- a/config/malisisblocks.cfg
+++ b/config/malisisblocks.cfg
@@ -1,16 +1,16 @@
 # Configuration file
 
 general {
-    # 框架会随机变得不稳定且会暂时消失. 
+    # config.enableVanishingGlitch.comment 
     B:config.enableVanishingGlitch=true
 
-    # 使你能在所看的地方而不是一个侧面放置方块. 使用潜行来切换放置判定. 
+    # config.enhancedMixedBlockPlacement.comment1 config.enhancedMixedBlockPlacement.comment2 
     B:config.enhancedMixedBlockPlacement=true
 
-    # 启用混合方块的流畅渲染. 如果你遇到了深度冲突或是渲染干扰,启用该选项. 
+    # config.simpleMixedBlockRendering.comment1 config.simpleMixedBlockRendering.comment2 
     B:config.simpleMixedBlockRendering=false
 
-    # 框架变得不稳定的频率. 
+    # config.vanishingGlitchChance.comment 
     D:config.vanishingGlitchChance=5.0E-4
 }
 
