--- a/config/jei/bookmarks.ini
+++ b/config/jei/bookmarks.ini
@@ -1,3 +1,5 @@
+T:{id:"mysticalworld:amethyst_gem",Count:1b,Damage:0s}
+T:{id:"minecraft:leather",Count:1b,Damage:0s}
 T:{id:"bountiful:bounty",Count:1b,tag:{boardStamp:256803L,bountyTime:37800L,gets:{0:{amount:22,content:"harvestcraft:southernstylebreakfastitem"},1:{amount:24,content:"harvestcraft:cornedbeefbreakfastitem"}},rewards:{0:{amount:12,content:"ordinarycoins:coinsilver"},1:{amount:60,content:"ordinarycoins:coinbronze"}},rarity:0,worth:1260},Damage:0s}
 T:{id:"biomesoplenty:dirt",Count:1b,Damage:1s}
 T:{id:"tconstruct:battlesign",Count:1b,tag:{StatsOriginal:{AttackSpeedMultiplier:1.0f,MiningSpeed:7.0f,FreeModifiers:3,Durability:1247,HarvestLevel:4,Attack:7.0f},Stats:{AttackSpeedMultiplier:1.0f,MiningSpeed:7.0f,FreeModifiers:3,Durability:1247,HarvestLevel:4,Attack:7.0f},Special:{Categories:["weapon","tool"],RepairCount:1},TinkerData:{Materials:["wood","emerald_plustic"],Modifiers:["toolleveling"]},Modifiers:[{identifier:"ecological",color:-7444965,level:1},{identifier:"elemental",color:-11141291,level:1},{identifier:"toolleveling",color:16777215,level:1,xp:697,bonus_modifiers:0}],Traits:["ecological","elemental","toolleveling"]},Damage:0s}
