--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -232,17 +232,39 @@ general {
     B:"MM_Weakness enabled"=true
     B:"MM_Webber enabled"=true
     B:"MM_Wither enabled"=true
+
+    # List of DimensionIDs where InfernalMobs will NEVER spawn
     S:dimensionIDBlackList=
+
+    # Disables the ingame Health and Name overlay
     B:disableGUIoverlay=false
+
+    # List of equally likely to drop Items for Elites, seperated by commas, syntax: ID-meta-stackSize-stackSizeRandomizer, everything but ID is optional, see changelog
     S:droppedItemIDsElite=cookie-0-6,ordinarycoins:coinsilver-0-2
+
+    # List of equally likely to drop Items for Infernals, seperated by commas, syntax: ID-meta-stackSize-stackSizeRandomizer, everything but ID is optional, see changelog
     S:droppedItemIDsInfernal=diamond-0-3,ender_pearl,enchanted_book,ordinarycoins:coinsilver-0-4
+
+    # List of equally likely to drop Items for Ultras, seperated by commas, syntax: ID-meta-stackSize-stackSizeRandomizer, everything but ID is optional, see changelog
     S:droppedItemIDsUltra=golden_helmet,golden_chestplate,golden_leggings,golden_boots,golden_apple,blaze_powder-0-3,enchanted_book,ordinarycoins:coinsilver-0-8
+
+    # One in THIS many Mobs will become atleast rare
     I:eliteRarity=15
+
+    # One in THIS many already ultra Mobs will become infernal
     I:infernoRarity=7
+
+    # highest amount of damage an Infernal Mob or reflecting Mod will do in a single strike
     D:maxOneShotDamage=10.0
     D:mobFarmDamageThreshold=150.0
+
+    # Multiplier applied ontop of all of the modified Mobs health
     S:mobHealthFactor=1.0
+
+    # One in THIS many already rare Mobs will become atleast ultra
     I:ultraRarity=3
+
+    # Use Entity class names instead of ingame Entity names for the config
     B:useSimpleEntityClassnames=true
 }
 
