--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -141,7 +141,7 @@ world113318802 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=shuye
+    S:filterText=@minecraftf
     B:overlayEnabled=true
 }
 
@@ -156,7 +156,7 @@ world1492318757 {
 
 
 world1544803905 {
-    S:filterText=
+    S:filterText=jishi
 }
 
 
@@ -287,10 +287,17 @@ world49056279 {
 
 
 world50729028 {
+    # 在打开的 GUI 一侧显示书签列表。
     B:bookmarkOverlayEnabled=true
-    B:cheatItemsEnabled=true
+
+    # 给予物品而非显示其配方。
+    B:cheatItemsEnabled=false
+
+    # 在列表中点击物品以隐藏或取消隐藏。
     B:editEnabled=false
-    S:filterText=@eng
+    S:filterText=@immer
+
+    # 在打开的 GUI 一侧显示物品列表。
     B:overlayEnabled=true
 }
 
@@ -332,17 +339,10 @@ world79398 {
 
 
 world805325770 {
-    # 在打开的 GUI 一侧显示书签列表。
     B:bookmarkOverlayEnabled=true
-
-    # 给予物品而非显示其配方。
     B:cheatItemsEnabled=true
-
-    # 在列表中点击物品以隐藏或取消隐藏。
     B:editEnabled=false
     S:filterText=smooth
-
-    # 在打开的 GUI 一侧显示物品列表。
     B:overlayEnabled=true
 }
 
