--- a/config/jei/bookmarks.ini
+++ b/config/jei/bookmarks.ini
@@ -1,3 +1,6 @@
+T:{id:"tconstruct:shovel",Count:1b,tag:{StatsOriginal:{AttackSpeedMultiplier:1.0f,MiningSpeed:4.0f,FreeModifiers:3,Durability:165,HarvestLevel:1,Attack:3.0f},Stats:{AttackSpeedMultiplier:1.0f,MiningSpeed:4.0f,FreeModifiers:3,Durability:132,HarvestLevel:1,Attack:3.0f},Special:{Categories:["tool","harvest","aoe"]},TinkerData:{Materials:["wood","stone","stone"],Modifiers:["toolleveling"]},Modifiers:[{identifier:"ecological",color:-7444965,level:1},{identifier:"cheapskate",color:-6710887,level:1},{identifier:"cheap",color:-6710887,level:1},{identifier:"toolleveling",color:16777215,level:1,xp:258,bonus_modifiers:0}],Traits:["ecological","cheapskate","cheap","toolleveling"]},Damage:0s}
+T:{id:"immersiveengineering:mold",Count:1b,Damage:0s}
+T:{id:"immersiveengineering:material",Count:1b,Damage:8s}
 T:{id:"mysticalworld:amethyst_gem",Count:1b,Damage:0s}
 T:{id:"minecraft:leather",Count:1b,Damage:0s}
 T:{id:"bountiful:bounty",Count:1b,tag:{boardStamp:256803L,bountyTime:37800L,gets:{0:{amount:22,content:"harvestcraft:southernstylebreakfastitem"},1:{amount:24,content:"harvestcraft:cornedbeefbreakfastitem"}},rewards:{0:{amount:12,content:"ordinarycoins:coinsilver"},1:{amount:60,content:"ordinarycoins:coinbronze"}},rarity:0,worth:1260},Damage:0s}
