--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -141,7 +141,7 @@ world113318802 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=@minecraftf
+    S:filterText=huangdou
     B:overlayEnabled=true
 }
 
@@ -156,7 +156,7 @@ world1492318757 {
 
 
 world1544803905 {
-    S:filterText=jishi
+    S:filterText=
 }
 
 
@@ -232,6 +232,15 @@ world2609 {
 }
 
 
+world3324672 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world3362853 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
@@ -287,17 +296,10 @@ world49056279 {
 
 
 world50729028 {
-    # 在打开的 GUI 一侧显示书签列表。
     B:bookmarkOverlayEnabled=true
-
-    # 给予物品而非显示其配方。
     B:cheatItemsEnabled=false
-
-    # 在列表中点击物品以隐藏或取消隐藏。
     B:editEnabled=false
-    S:filterText=@immer
-
-    # 在打开的 GUI 一侧显示物品列表。
+    S:filterText=waizhi
     B:overlayEnabled=true
 }
 
@@ -357,10 +359,17 @@ world942373737 {
 
 
 world99590 {
+    # 在打开的 GUI 一侧显示书签列表。
     B:bookmarkOverlayEnabled=true
+
+    # 给予物品而非显示其配方。
     B:cheatItemsEnabled=true
+
+    # 在列表中点击物品以隐藏或取消隐藏。
     B:editEnabled=false
-    S:filterText=@hostile
+    S:filterText=@taiga
+
+    # 在打开的 GUI 一侧显示物品列表。
     B:overlayEnabled=true
 }
 
