--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -1,4 +1,3 @@
-
 # Configuration file
 
 entitiesalwaysinfernal {
@@ -123,6 +122,7 @@ entitiesalwaysinfernal {
 
 entitybasehealth {
     D:EntityAbyssalZombie=97.49998474121094
+    D:EntityAerwhale=174.54147338867188
     D:EntityAntiCreeper=182.79165649414062
     D:EntityAntiPlayer=44.92218017578125
     D:EntityAntiSkeleton=44.0
@@ -367,3 +367,5 @@ permittedentities {
     B:EntityZombie=true
     B:EntityZombieVillager=true
 }
+
+
